2000-03-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	breakpoint.c, breakpoint.h (remove_hw_watchpoints):  New function.
	infrun.c (resume):  Remove hardware watchpoints before stepping
	when CANNOT_STEP_HW_WATCHPOINTS is nonzero.

2000-03-28  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* Makefile.in: anchor tui-file.h dependency to $srcdir.

2000-03-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* procfs.c (proc_set_watchpoint):  Declare addr parameter as
	CORE_ADDR, to match call from procfs_set_watchpoint.

	* breakpoint.c (insert_breakpoints, do_enable_breakpoint):  
	Reselect the saved frame silently after frame selection for 
	watchpoint evaluation.
	(insert_breakpoints):  Add missing space in `Hardware watchpoint
	deleted' message.  Do not reinsert hardware watchpoint if it is
	already marked for deletion at next stop.

2000-03-28  Christopher Faylor  <cgf@cygnus.com>

        * partial-stab.h: Add one more check against corrupted or irregular
        stabs entry.

Tue Mar 28 12:23:37 2000  Philippe De Muyter  <phdm@macqel.be>

	* gnu-regex.c (regerror): Function renamed from `__regerror'.
	(Change also approved in the mainline glibc sources)

Tue Mar 28 18:19:50 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	From 2000-03-20 Jonathan Larmour <jlarmour@redhat.co.uk>:
        * ser-unix.c (do_unix_readchar): Reorganise to be more robust,
        particularly ensuring it can't return SERIAL_TIMEOUT when told
        not to time out.

2000-03-24  Daniel Berlin  <dan@cgsoftware.com>

	* gdbtypes.c (_initialize_gdbtypes): Add "set debug overload",
	which never existed before, and thus, has no deprecated old command.

	* gdbarch.c (_initialize_gdbarch): Add "set debug arch", deprecate
	"set archdebug" (same goes for the show commands).
	* gdb-events.c (_initialize_gdb_events): Add "set debug event",
	deprecate "set eventdebug" (same goes for the show commands).
	* gdbcmd.h: Add the setdebuglist and showdebuglist externs.