@@ -1,3 +1,10 @@
+Wed Mar 29 10:16:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* breakpoint.h (remove_hw_watchpoints): Add declaration.
+	* breakpoints.c (remove_hw_watchpoints): Update.
+	* maint.c (maintenance_do_deprecate): Avoid assignment within IF
+ 	condition.
+
 2000-03-28  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>
 
 	breakpoint.c, breakpoint.h (remove_hw_watchpoints):  New function.
